Bug 945811 - Correctly propagate errors from makeInliningDecision and similar methods. r=h4writer

--HG--
extra : rebase_source : 658f2446fd278757c8fe73786c881363fb8d7c01